Revert "fix : popup"
This reverts commit cfe68cab2a315a599b9c1d754afd692ec49516ff.

--- a/templates/eval/list_eval.html.twig
+++ b/templates/eval/list_eval.html.twig
@@ -24,36 +24,200 @@
         <div class="list-eval">
             <div class="contenu">
                 <ul class="list-item">
-                    {% for eval in evaluation %}
-                        {% if eval.IsActive == 1 %}
-                            <a class="question-card" id="myBtn">
-                                <li>
-                                    <p class="enonce-question"> {{ eval.titre }}</p>
-                                    <div class="param-question">
-                                        <div class="type">
-                                            <p class="nom">Nombre de questions :</p>
-                                            <p class="contenu-nom">30</p>
-                                        </div>
-            
-                                        <div class="diff">
-                                            <p class="nom">Date :</p>
-                                            <p class="contenu-nom">30/04/2022</p>
-                                        </div>
-                                    </div>
-                                    <div class="param-question">
-                                        <div class="chapitre">
-                                            <p class="nom">Chapitre :</p>
-                                            <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                                        </div>
-                                        <div class="theme">
-                                            <p class="nom">Thème :</p>
-                                            <p class="contenu-nom">{{ eval.ThemeEval.contenu }}</p>
-                                        </div>
-                                    </div>
-                                </li>
-                            </a>
-                        {% endif %}                        
-                    {% endfor %}
+                    <a class="question-card" id="myBtn">
+                        <li>
+                            <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                            <div class="param-question">
+                                <div class="type">
+                                    <p class="nom">Nombre de questions :</p>
+                                    <p class="contenu-nom">30</p>
+                                </div>
+    
+                                <div class="diff">
+                                    <p class="nom">Date :</p>
+                                    <p class="contenu-nom">30/04/2022</p>
+                                </div>
+                            </div>
+                            <div class="param-question">
+                                <div class="chapitre">
+                                    <p class="nom">Chapitre :</p>
+                                    <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                                </div>
+                                <div class="theme">
+                                    <p class="nom">Thème :</p>
+                                    <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                                </div>
+                            </div>
+                        </li>
+                    </a>
+                    <li>
+                        <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                        <div class="param-question">
+                            <div class="type">
+                                <p class="nom">Nombre de questions :</p>
+                                <p class="contenu-nom">30</p>
+                            </div>
+
+                            <div class="diff">
+                                <p class="nom">Date :</p>
+                                <p class="contenu-nom">30/04/2022</p>
+                            </div>
+                        </div>
+                        <div class="param-question">
+                            <div class="chapitre">
+                                <p class="nom">Chapitre :</p>
+                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                            </div>
+                            <div class="theme">
+                                <p class="nom">Thème :</p>
+                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                        <div class="param-question">
+                            <div class="type">
+                                <p class="nom">Nombre de questions :</p>
+                                <p class="contenu-nom">30</p>
+                            </div>
+
+                            <div class="diff">
+                                <p class="nom">Date :</p>
+                                <p class="contenu-nom">30/04/2022</p>
+                            </div>
+                        </div>
+                        <div class="param-question">
+                            <div class="chapitre">
+                                <p class="nom">Chapitre :</p>
+                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                            </div>
+                            <div class="theme">
+                                <p class="nom">Thème :</p>
+                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                        <div class="param-question">
+                            <div class="type">
+                                <p class="nom">Nombre de questions :</p>
+                                <p class="contenu-nom">30</p>
+                            </div>
+
+                            <div class="diff">
+                                <p class="nom">Date :</p>
+                                <p class="contenu-nom">30/04/2022</p>
+                            </div>
+                        </div>
+                        <div class="param-question">
+                            <div class="chapitre">
+                                <p class="nom">Chapitre :</p>
+                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                            </div>
+                            <div class="theme">
+                                <p class="nom">Thème :</p>
+                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                        <div class="param-question">
+                            <div class="type">
+                                <p class="nom">Nombre de questions :</p>
+                                <p class="contenu-nom">30</p>
+                            </div>
+
+                            <div class="diff">
+                                <p class="nom">Date :</p>
+                                <p class="contenu-nom">30/04/2022</p>
+                            </div>
+                        </div>
+                        <div class="param-question">
+                            <div class="chapitre">
+                                <p class="nom">Chapitre :</p>
+                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                            </div>
+                            <div class="theme">
+                                <p class="nom">Thème :</p>
+                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                        <div class="param-question">
+                            <div class="type">
+                                <p class="nom">Nombre de questions :</p>
+                                <p class="contenu-nom">30</p>
+                            </div>
+
+                            <div class="diff">
+                                <p class="nom">Date :</p>
+                                <p class="contenu-nom">30/04/2022</p>
+                            </div>
+                        </div>
+                        <div class="param-question">
+                            <div class="chapitre">
+                                <p class="nom">Chapitre :</p>
+                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                            </div>
+                            <div class="theme">
+                                <p class="nom">Thème :</p>
+                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                        <div class="param-question">
+                            <div class="type">
+                                <p class="nom">Nombre de questions :</p>
+                                <p class="contenu-nom">30</p>
+                            </div>
+
+                            <div class="diff">
+                                <p class="nom">Date :</p>
+                                <p class="contenu-nom">30/04/2022</p>
+                            </div>
+                        </div>
+                        <div class="param-question">
+                            <div class="chapitre">
+                                <p class="nom">Chapitre :</p>
+                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                            </div>
+                            <div class="theme">
+                                <p class="nom">Thème :</p>
+                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="enonce-question"> Evaluation BDD - CIR1</p>
+                        <div class="param-question">
+                            <div class="type">
+                                <p class="nom">Nombre de questions :</p>
+                                <p class="contenu-nom">30</p>
+                            </div>
+
+                            <div class="diff">
+                                <p class="nom">Date :</p>
+                                <p class="contenu-nom">30/04/2022</p>
+                            </div>
+                        </div>
+                        <div class="param-question">
+                            <div class="chapitre">
+                                <p class="nom">Chapitre :</p>
+                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
+                            </div>
+                            <div class="theme">
+                                <p class="nom">Thème :</p>
+                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
