--- a/templates/questions/questions.html.twig
+++ b/templates/questions/questions.html.twig
@@ -35,54 +35,76 @@
                 <div class="info" id="type">
                     <p class="element">Type :</p>
                     <select name="type">
-                        {% for t in type %}
-                            <option value="{{t.libelle}}"   
-                            {% if question.TypeQuestion.id == t.id %}
-                                selected
-                            {% endif %}     
-                            >{{t.libelle}}</option>
-                        {% endfor %}
+                        <option value="">Choissez un type</option> 
+                        <option value="QCM">QCM</option>
+                        <option value="libre">Libre</option>
                     </select>
                 </div>
                 <div class="info" id="chapitre">
                     <p class="element">Thèmes :</p>
                     <div class="choix-chap-them">
                         <ul class="list-chap-them">
-                            {% for th in theme %}
-                                <li>
-                                    <input type="checkbox" 
-                                    {% if question.Chapitre.Theme.id == th.id %}
-                                        checked
-                                    {% endif %}
-                                    >
-                                    <p>{{ th.contenu }}</p>
-                                </li>
-                                
-                            {% endfor %}
-                        </ul>   
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>   
+                        </ul>    
                     </div>
                 </div>
                 <div class="info" id="theme">
                     <p class="element">Chapitre :</p>
                     <div class="choix-chap-them">
                         <ul class="list-chap-them">
-                            {% for c in chapitre %}
-                                <li>
-                                    <input type="checkbox" 
-                                    {% if question.Chapitre.id == c.id %}
-                                        checked
-                                    {% endif %}
-                                    >
-                                    <p>{{ c.contenu }}</p>
-                                </li>
-                                
-                            {% endfor %}  
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>
+                            <li>
+                                <input type="checkbox" >
+                                <p>qsdfghjklm</p>
+                            </li>   
                         </ul>    
                     </div>
                 </div>
                 <div class="info" id="enonce">
                     <p class="element">Enoncé</p>
-                    <textarea placeholder="Ajoutez un texte..." class="enonce"> {{ question.enonce }}</textarea>
+                    <textarea placeholder="Ajoutez un texte..." class="enonce"></textarea>
                 </div>
                 <div class="info" id="reponses">
                     <p class="element">Réponses :</p>
@@ -92,15 +114,18 @@
                 </div>
                 <div class="info" id="difficulte">
                     <p class="element">Difficulté :</p>
-                    <select name="type">
-                        {% for d in difficulte %}
-                            <option value="{{d.libelle}}"   
-                            {% if question.Difficulte.id == d.id %}
-                                selected
-                            {% endif %}     
-                            >{{d.libelle}}</option>
-                        {% endfor %}
-                    </select>
+                    <form>
+                        <fieldset>
+                            <span class="star-cb-group">
+                            <input type="radio" id="rating-5" name="rating" value="5" /><label for="rating-5">5</label>
+                            <input type="radio" id="rating-4" name="rating" value="4" checked="checked" /><label for="rating-4">4</label>
+                            <input type="radio" id="rating-3" name="rating" value="3" /><label for="rating-3">3</label>
+                            <input type="radio" id="rating-2" name="rating" value="2" /><label for="rating-2">2</label>
+                            <input type="radio" id="rating-1" name="rating" value="1" /><label for="rating-1">1</label>
+                            <input type="radio" id="rating-0" name="rating" value="0" class="star-cb-clear" /><label for="rating-0">0</label>
+                            </span>
+                        </fieldset>
+                    </form>
                 </div>
                 <div class="info" id="image-question">
                     <button class="bouton-vide">Ajouter une image</button>
