--- a/public/assets/CSS/style_m_d.css
+++ b/public/assets/CSS/style_m_d.css
@@ -239,6 +239,7 @@ color: #D64551;
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
+  border: 1px solid #888;
   width: 80%;
   overflow: visible !important;
 
