fix : bad commit

--- a/templates/main/modif_data.html.twig
+++ b/templates/main/modif_data.html.twig
@@ -73,7 +73,7 @@
                     </svg>
                 </div>
                 <button class="rempli">Filtrer</button>
-                <button class="rempli">Ajouter une question</button>
+                <a class="rempli" href="{{ path('questions_ajouter') }}">Ajouter une question</a>
             </div>
                 
 
