--- a/public/assets/CSS/style_m_d.css
+++ b/public/assets/CSS/style_m_d.css
@@ -119,14 +119,17 @@ input[type="search"]::placeholder{
   color: #ffffff;
 }
   
-button.rempli{
-  width: 10vw;
+.rempli{
   padding-top: 1vh;
   padding-bottom: 1vh;
+  padding-left: 2vw;
+  padding-right: 2vw;
   border-radius: 30px;
   background: #6EA5BE;
   border: none;
   color:#ffffff;
+  text-decoration: none;
+
 }
 
 button.rempli-c{
@@ -297,11 +300,11 @@ select{
   border-radius: 6px;
 }
 
-p.element{
+.element{
   color:#D64551;
 }
 
-#reponses p.element{
+#reponses .element{
   margin-bottom:0vh;
 
 }
