fix : popup vide ou remplie
c'est plus une popup mais un changement de page

--- a/public/assets/CSS/choix_question_eval.css
+++ b/public/assets/CSS/choix_question_eval.css
@@ -140,6 +140,11 @@ ul li:hover {
     background: #F8F8F8;
 }
 
+a.question-card{
+    color:#000000;
+    text-decoration: none;
+}
+
 
 
 div.search-button{
