--- a/templates/main/modif_data.html.twig
+++ b/templates/main/modif_data.html.twig
@@ -79,224 +79,36 @@
 
             <div class="contenu">
                 <ul class="list-item">
-                    <a class="question-card" id="myBtn">
-                        <li>
-                            <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                            <div class="param-question">
-                                <div class="type">
-                                    <p class="nom">Type :</p>
-                                    <p class="contenu-nom">QCM</p>
-                                </div>
+                    {% for q in question %}
+                        {% if q.IsActive == 1 %}
+                            <a class="question-card" href="{{ path('questions_list', {id: q.id}) }}">
+                                <li>
+                                    <p class="enonce-question">{{ q.enonce }}</p>
+                                    <div class="param-question">
+                                        <div class="type">
+                                            <p class="nom">Type :</p>
+                                            <p class="contenu-nom">{{ q.TypeQuestion.libelle }}</p>
+                                        </div>
 
-                                <div class="diff">
-                                    <p class="nom">Difficulté :</p>
-                                    <p class="contenu-nom">3</p>
-                                </div>
-                            </div>
-                            <div class="param-question">
-                                <div class="chapitre">
-                                    <p class="nom">Chapitre :</p>
-                                    <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                                </div>
-                                <div class="theme">
-                                    <p class="nom">Thème :</p>
-                                    <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                                </div>
-                            </div>
-                        </li>
-                    </a>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <p class="enonce-question">Qu’est ce qui permet au bases de données d’etres utilisé de facon proéminantes par les industriels de nos jours? en sachant qu’elles sont utilisées par IKEA, Zara, Super U et ...</p>
-                        <div class="param-question">
-                            <div class="type">
-                                <p class="nom">Type :</p>
-                                <p class="contenu-nom">QCM</p>
-                            </div>
-
-                            <div class="diff">
-                                <p class="nom">Difficulté :</p>
-                                <p class="contenu-nom">3</p>
-                            </div>
-                        </div>
-                        <div class="param-question">
-                            <div class="chapitre">
-                                <p class="nom">Chapitre :</p>
-                                <p class="contenu-nom">qsdfghjklkjhgfdsqSDFGHJJHGFDSQSD</p>
-                            </div>
-                            <div class="theme">
-                                <p class="nom">Thème :</p>
-                                <p class="contenu-nom">qzsfdghjkimgyeqezqfwdgbyj</p>
-                            </div>
-                        </div>
-                    </li>
+                                        <div class="diff">
+                                            <p class="nom">Difficulté :</p>
+                                            <p class="contenu-nom">{{ q.difficulte.libelle }}</p>
+                                        </div>
+                                    </div>
+                                    <div class="param-question">
+                                        <div class="chapitre">
+                                            <p class="nom">Chapitre :</p>
+                                            <p class="contenu-nom">{{ q.Chapitre.contenu }}</p>
+                                        </div>
+                                        <div class="theme">
+                                            <p class="nom">Thème :</p>
+                                            <p class="contenu-nom">{{ q.Chapitre.Theme.contenu }}</p>
+                                        </div>
+                                    </div>
+                                </li>
+                            </a>
+                        {% endif %}
+                    {% endfor %}
                 </ul>
             </div>
         </div>    
