--- a/public/assets/CSS/profil.css
+++ b/public/assets/CSS/profil.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 h2{
     text-align: center;
     margin-top: 5vh;
@@ -51,12 +46,7 @@ button.rempli{
 .pdp{
     width: 10vw;
     border-radius: 50px;
-
 }
-
-
-
-
 
 
 div.contenu{
@@ -98,4 +88,17 @@ div.photo-profil{
 div.centrer{
     display: flex;
     justify-content: center;
+}
+
+.password-container {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.password-input {
+    border: 1px solid #ccc;
+    padding: 8px;
+    border-radius: 4px;
+    flex-grow: 1;
 }
