--- a/public/assets/CSS/style_log.css
+++ b/public/assets/CSS/style_log.css
@@ -41,7 +41,28 @@ input[type="text"], input[type="password"], input[type="email"]{
     color:#000000;
 }
 
-input[type="button"] {
+.nom, .prenom, .email, .password, .confirm_password{
+    max-width: 100vh;
+    width: 100%;
+    margin-top:1vh;
+    padding-left: 1vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    border-radius: 6px;
+    background-color: #ffffff;
+}
+
+button {
+    max-width: 100vh;
+    width: 100%;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    border-radius: 6px;
+    background:#6EA5BE;
+    border: none;
+}
+
+input[type="submit"]{
     max-width: 100vh;
     width: 100%;
     padding-top: 1vh;
@@ -134,3 +155,4 @@ input[type="button"] {
     opacity:0.9;
     z-index:2;
 }
+
